--- a/src/Cards/Profile-card-component/Profile-card-component.scss
+++ b/src/Cards/Profile-card-component/Profile-card-component.scss
@@ -4,14 +4,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
 
 
-main {
+.profile-card {
   display: flex;
-  height: 100vh;
+  // height: 100vh;
   width: 100%;
   justify-content: center;
   align-items: center;
   background-color: $Dark-cyan;
-  background-image: url('./images/bg-pattern-top.svg'), url('./images/bg-pattern-bottom.svg');
+  // background-image: url('./images/bg-pattern-top.svg'), url('./images/bg-pattern-bottom.svg');
   background-position: 10% 10%, 10% 10%;
   background-repeat: no-repeat;
 }
